Specified Avatar. update-home-html

--- a/_config.yml
+++ b/_config.yml
@@ -48,7 +48,7 @@ social-network-links:
 #  reddit: yourname
 #  linkedin: https://www.linkedin.com/in/gaughanchristopher/
 #  xing: yourname
-#  stackoverflow: "3943160/daattali"
+#  stackoverflow: ""
 #  snapchat: deanat78
 #  instagram: deanat78
 #  spotify: yourname
